# GitHub-Notion-Automation

./: .env example  .gitignore  README.md  github_notion_sync_with_secrets.py  github_to_notion_automation.py  pyproject.toml  requirements.txt
